# AUTOSAR_CP_CODE

./: .gitignore  CMakeLists.txt  README.md
script/a2ltools/: A2lCheck.py  README.md  luopan.py  run_a2l.py
script/a2ltools/Lib/: a2ltool.exe:Zone.Identifier
script/arxmlgen/: SwcOutput.arxml  arxml2excel.py  basic_type_references.json  converted_from_arxml.xlsx  excel2arxml.py  gui_converter.py
script/cmake/: chip_toolchain.cmake  compiler_options.cmake  submodule_library.cmake
src/: CMakeLists.txt
src/appwrp/: CMakeLists.txt
src/appwrp/IoWrp/: CMakeLists.txt  IoWrp_Sensor.c
src/appwrp/VRM/: VRM.c  VRM.h  VRM_InputsReading.arxml  VRM_InputsReading.c  VRM_PupCtrl.c  VRM_PupCtrl.h  VRM_Types.h  VRM_VoltSts.arxml  VRM_VoltSts.h  VRM_VoltageCompensate.c  VRM_VoltageCompensate.h
src/appwrp/VRM/VRM_Cfg/: VRM_Cfg.c  VRM_Cfg.h
src/appwrp/Vrm/: CMakeLists.txt  Vrm.c  Vrm.h  Vrm_InputsReading.c  Vrm_PupCtrl.c  Vrm_PupCtrl.h  Vrm_Types.h  Vrm_VoltSts.h  Vrm_VoltageCompensate.c  Vrm_VoltageCompensate.h
src/appwrp/Vrm/Vrm_Cfg/: CMakeLists.txt  Vrm_Cfg.c  Vrm_Cfg.h
src/bsw/: CMakeLists.txt
src/bsw/AdcIf/: AdcIf.c  AdcIf.h  AdcIf_Cfg.c  CMakeLists.txt
src/bsw/Cdd/: CMakeLists.txt
src/bsw/Cdd/Pfm/: CMakeLists.txt  Pfm.c  Pfm.h  Pfm_Cfg.c  Pfm_Cfg.h  Pfm_Types.h
src/bsw/Cdd/Pmm/Hpm/: Pmm_Hpm.c  Pmm_Hpm.h
src/bsw/Cdd/Pmm/Lpm/: Pmm_Lpm.c  Pmm_Lpm.h  Pmm_Lpm_LCfg.c  Pmm_Lpm_LCfg.h
src/bsw/Cdd/ResetM/: CMakeLists.txt  ResetM.c  ResetM.h  ResetM_Cfg.c  ResetM_Cfg.h
src/bsw/Cdd/Vrm/: CMakeLists.txt  Vrm.c  Vrm_PupCtrl.c  Vrm_Types.h  Vrm_VoltComp.h
src/bsw/Cdd/Vrm/Vrm_Cfg/: Vrm_Cfg.c  Vrm_Cfg.h
src/bsw/DioIf/: CMakeLists.txt  DioIf.c  DioIf_Cfg.c  DioIf_Cfg.h
src/bsw/IoHwAb/: CMakeLists.txt
src/bsw/IoHwAb/AdcIf/: AdcIf.h  AdcIf_Cfg.c  AdcIf_Cfg.h  AdcIf_Types.h
src/bsw/IoHwAb/DioIf/: CMakeLists.txt  DioIf.c  DioIf.h  DioIf_Types.h
src/bsw/IoHwAb/HbIf/: CMakeLists.txt  HbIf.c  HbIf.h  HbIf_Cfg.c  HbIf_Cfg.h  HbIf_Types.h
src/bsw/IoHwAb/IoHwAb_AnalogIn/: CMakeLists.txt  IoHwAb_AnalogIn.c  IoHwAb_AnalogIn.h  IoHwAb_AnalogIn_Api.h  IoHwAb_AnalogIn_Cfg.c  IoHwAb_AnalogIn_Cfg.h  IoHwAb_AnalogIn_Types.h
src/bsw/IoHwAb/IoHwAb_DigitalIn/: CMakeLists.txt  IoHwAb_DigitalIn.c  IoHwAb_DigitalIn.h  IoHwAb_DigitalIn_Api.h  IoHwAb_DigitalIn_Cfg.c  IoHwAb_DigitalIn_Cfg.h  IoHwAb_DigitalIn_Types.h
src/bsw/IoHwAb/IoHwAb_DigitalOut/: CMakeLists.txt  IoHwAb_DigitalOut.c  IoHwAb_DigitalOut.h  IoHwAb_DigitalOut_Cfg.c  IoHwAb_DigitalOut_Cfg.h  IoHwAb_DigitalOut_Types.h
src/bsw/IoHwAb/IoHwAb_Motor/: CMakeLists.txt  IoHwAb_Motor.c  IoHwAb_Motor.h  IoHwAb_Motor_Cfg.c  IoHwAb_Motor_Cfg.h
src/bsw/IoHwAb/IoHwAb_PwmCap/: CMakeLists.txt  IoHwAb_PwmCap.c  IoHwAb_PwmCap.h  IoHwAb_PwmCap_Cfg.c  IoHwAb_PwmCap_Cfg.h  IoHwAb_PwmCap_Types.h
src/bsw/IoHwAb/IoHwAb_PwmOut/: CMakeLists.txt  IoHwAb_PwmOut.c  IoHwAb_PwmOut.h  IoHwAb_PwmOut_Api.h  IoHwAb_PwmOut_Cfg.c  IoHwAb_PwmOut_Cfg.h  IoHwAb_PwmOut_Types.h
src/bsw/IoHwAb/PwmIf/: PwmIf.h  PwmIf_Cfg.c
src/bsw/OnBoardDevices/: CMakeLists.txt
src/bsw/OnBoardDevices/Bjt/: Bjt.c  Bjt.h  Bjt_HwCfg.c  Bjt_HwCfg.h  Bjt_Types.h  CMakeLists.txt
src/bsw/OnBoardDevices/Tle9210x/: CMakeLists.txt  Tle9210x.c  Tle9210x.h  Tle9210x_HwCfg.c  Tle9210x_HwCfg.h  Tle9210x_Types.h
src/bsw/OnBoardDevices/Tle941xy/: CMakeLists.txt  Tle941xy.c  Tle941xy.h  Tle941xy_HwCfg.c  Tle941xy_HwCfg.h  Tle941xy_Types.h
src/bsw/OnBoardDevices/Vn7x/: CMakeLists.txt  Vn7x.c  Vn7x.h  Vn7x_HwCfg.c  Vn7x_HwCfg.h  Vn7x_Types.h
src/bsw/Pfm/: CMakeLists.txt  Pfm.c  Pfm.h  Pfm_Cfg.c  Pfm_Cfg.h  Pfm_Types.h
src/bsw/PwmIf/: CMakeLists.txt  PwmIf.c  PwmIf.h  PwmIf_Cfg.c  PwmIf_Cfg.h  PwmIf_Types.h
src/bsw/Vrm/: Vrm.arxml  Vrm.h  Vrm_PupCtrl.h  Vrm_Svc.c  Vrm_VoltComp.c  Vrm_VoltSts.c  Vrm_VoltSts.h
src/bswlib/Pfm_TS_T25M11R0/: .project  CMakeLists.txt  anchors.xml  plugin.properties  plugin.xml
src/bswlib/Pfm_TS_T25M11R0/autosar/: Pfm.epd
src/bswlib/Pfm_TS_T25M11R0/cmake/: Pfm_Config.cmake.in
src/bswlib/Pfm_TS_T25M11R0/config/: Pfm.xdm
src/bswlib/Pfm_TS_T25M11R0/generate/include/: Pfm_Cfg.h
src/bswlib/Pfm_TS_T25M11R0/generate/src/: Pfm_Cfg.c
src/bswlib/Pfm_TS_T25M11R0/generate_swcd/swcd/: Pfm.m  Pfm_Bswmd.arxml
src/bswlib/Pfm_TS_T25M11R0/src/: Pfm.c
src/common/: Compiler.h  Compiler_Cfg.h  Platform_Types.h  Std_Types.h
